<resources>
    <string name="app_name">Ejercicio Propuesto Dialogos</string>
    <string name="nombre">Nombre</string>
    <string name="contraseña">Contraseña</string>
    <string name="recordar">Recuerdame</string>
    <string name="contraseñaOlvidada">¿Olvidaste tu contraseña?</string>
    <string name="crear">Crear cuenta</string>
    <string name="iniciar">Iniciar sesion</string>
    <string name="requisitosCuenta">Necesitas tener creada una cuenta para iniciar la aplicacion</string>
</resources>
